# DevTracki

./: .env  .env.example  Procfile  RAILWAY_DEPLOY_GUIDE.md  README.md  Readme.md  database.py  nixpacks.toml  pyproject.toml  railway.json
.github/workflows/: railway-deploy.yml
APP/: config.py  database.py  main.py
APP/core/: dependencies.py  security.py
APP/models/: project.py  task.py  user.py
APP/router/: auth.py  project.py  tasks.py
APP/schemas/: projects.py  task.py  user.py
APP/tests/: test_api.py
